--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
       .join('');
   }
 
-  speechSynthesis.addEventListener('voiceschanged', populateVoices);
+  function setVoice() {
+    console.log('Changing voice');
+  }
 
+  speechSynthesis.addEventListener('voiceschanged', populateVoices);
+  voicesDropdown.addEventListener('change', setVoice);
 </script>
 
 </body>
