--- a/index.html
+++ b/index.html
@@ -56,8 +56,14 @@
     }
   }
 
+  function setOption() {
+    console.log(this.name, this.value);
+  }
+
   speechSynthesis.addEventListener('voiceschanged', populateVoices);
   voicesDropdown.addEventListener('change', setVoice);
+  options.forEach(option => option.addEventListener('change', setOption));
+
 </script>
 
 </body>
