--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
   function setOption() {
     console.log(this.name, this.value);
+    msg[this.name] = this.value;
+    toggle();
   }
 
   speechSynthesis.addEventListener('voiceschanged', populateVoices);
