--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
   voicesDropdown.addEventListener('change', setVoice);
   options.forEach(option => option.addEventListener('change', setOption));
   speakButton.addEventListener('click', toggle);
-  stopButton.addEventListener('click', function() {
-    toggle(false);
-  });
+  stopButton.addEventListener('click', toggle.bind(null, false));
 
 </script>
 
