--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   }
 
   function setVoice() {
-    msg.voice = voices.find(voice => voice.name = this.value);
+    msg.voice = voices.find(voice => voice.name === this.value);
     toggle();
   }
 
